Homepage: carousel color fixes; collapse career info

--- a/app/scss/_apply.scss
+++ b/app/scss/_apply.scss
@@ -19,6 +19,7 @@
   .button-apply-white {
     color: black;
     background-color: white;
+    border: 1px solid black;
   }
   .button-apply-black {
     color: white;
